--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>ElectronicHub</title>
 </head>
-<body>
+<body>      
         <nav class="navbar background h-nav-resp">
             <div class="logo"><h1>Electronic HUB</h1></div>
             <ul class="nav-list v-class-resp">
@@ -21,11 +21,13 @@
                <button class="btn-sm">search</button>
                <button class="btn-sm"><a href="./login.html">Login</a></button>
            </div>
+           <div class="heading-nav"><h1>ElectronicHub</h1></div>
            <div class="burger">
            <div class="line"></div>
            <div class="line"></div>
            <div class="line"></div>
            </div>
+           
         </nav>
         <section class="background firstsection" id="home">
             <div class="box-main">
@@ -95,12 +97,28 @@
         </Section>
         </form>
         <br>
-        <Section class="footer-main background">
+        <Section class="footer-main">
             <div class="footer-heading">
-                <h2>copy right 2021-ElectronicHUB.com.All right reserved</h2>
+                <h1>ElectronicHub</h1>
                 </div>
-           
+                <div class="aboutus"><h2>ABOUT US</h2>
+                    <p>ElectronicHub is a blog where we post blogs related to<br>HTML CSS JavaScript & PHP along with creative coding stuff.</p>
+                    <br>
+                    <p>Contact us: contact@ElectronicHubweb.com</p></div>
+            </div>
+            <br>
+            <div class="contact-heading"><h2>FOLLOW US</h2>
+            <div class="contact-logo">
+                <a href="#"><img src="./img/twitter.png" alt="twitter"></a>
+                <a href="#"><img src="./img/instagram.png" alt="twitter"></a>
+                <a href="#"><img src="./img/linkedin.png" alt="twitter"></a>
+                <a href="#"><img src="./img/github.svg" alt="twitter"></a>
+            </div>
+            </div>
         </Section>
+            <div class="container">
+                <h2>copyright 2021-ElectronicHUB.com.All right reserved</h2>
+            </div>
         <script src="resp.js"></script>
         <script type="text/javascript">
 
